added dev ref in the ingest yaml file

--- a/.github/workflows/noaa_ingest.yaml
+++ b/.github/workflows/noaa_ingest.yaml
@@ -23,6 +23,9 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+         ref: dev
+
  
       - name: Set up Python
         uses: actions/setup-python@v4
