--- a/.github/workflows/noaa_ingest.yaml
+++ b/.github/workflows/noaa_ingest.yaml
@@ -39,13 +39,13 @@ jobs:
       - name: Calculate dynamic dates
         run: |
           if [ -z "${{ github.event.inputs.start_date }}" ]; then
-            echo "START_DATE=$(date -u --date='yesterday' '+%Y-%m-%d')" >> $GITHUB_ENV
+            echo "START_DATE=$(date --date='3 days ago' '+%Y-%m-%d')" >> $GITHUB_ENV
           else
             echo "START_DATE=${{ github.event.inputs.start_date }}" >> $GITHUB_ENV
           fi
           
           if [ -z "${{ github.event.inputs.end_date }}" ]; then
-            echo "END_DATE=$(date -u '+%Y-%m-%d')" >> $GITHUB_ENV
+            echo "END_DATE=$(date '+%Y-%m-%d')" >> $GITHUB_ENV
           else
             echo "END_DATE=${{ github.event.inputs.end_date }}" >> $GITHUB_ENV
           fi  
